--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=sfera_lms
+spring.datasource.url=jdbc:postgresql://localhost:5432/sfera
+spring.datasource.username=postgres
+spring.datasource.password=root123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.sql.init.mode=always
+
+jwt.token.key=SecretKey
+jwt.token.ttl=86400000
