--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,17 @@
             <artifactId>swagger-annotations</artifactId>
             <version>1.6.14</version>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.5.2.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.5.2.Final</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
