--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,13 @@ spring.sql.init.mode=always
 
 jwt.token.key=SecretKey
 jwt.token.ttl=86400000
+
+spring.servlet.multipart.file-size-threshold=10GB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=900GB
+spring.servlet.multipart.max-request-size=900GB
+
+
+file.upload-dir1=videos
+file.upload-dir2=files
+file.upload-dir3=images
